welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:14: error: not found: value baisse
baisse brosse();
^Runner:59: error: value Pink is not a member of object java.awt.Color
setCouleurBrosse(Color.Pink);
                       ^