welcome.lessons.welcome.loopfor.LoopStairs.scala.code
while (!estFaceMur()){
	setCouleurBrosse(Color.lightGray);
	baisseBrosse();
	avance();
}
gauche();
baisseBrosse();
avance();
droite();
setCouleurBrosse(Color.blue);
	baisseBrosse();
	avance();
gauche();
baisse brosse();
avance();
droite();
setCouleurBrosse(Color.cyan);
	baisseBrosse();
	avance();
gauche();
baisseBrosse();
avance();
droite();
setCouleurBrosse(Color.green);
	baisseBrosse();
	avance();
gauche();
baisseBrosse();
avance();
droite();
setCouleurBrosse(Color.yellow);
	baisseBrosse();
	avance();
gauche();
baisseBrosse();
avance();
droite();
setCouleurBrosse(Color.orange);
	baisseBrosse();
	avance();
gauche();
baisseBrosse();
avance();
droite();
setCouleurBrosse(Color.red);
	baisseBrosse();
	avance();
gauche();
baisseBrosse();
avance();
droite();
setCouleurBrosse(Color.magenta);
	baisseBrosse();
	avance();
gauche()
leveBrosse()
avance()
droite()
setCouleurBrosse(Color.Pink);
avance()
avance()
avance()
avance()